Overflow fix

--- a/source/sass/blocks/offers.scss
+++ b/source/sass/blocks/offers.scss
@@ -149,7 +149,7 @@
 
 .offers__list {
   min-width: 290px;
-  width: 93%;
+  width: 90%;
   margin: 0;
   padding: 0 15px;
   list-style: none;
